Bug 58360 - FILEOPEN .xls changes anchor of pictures from "Cell" to "Page"
Summary: FILEOPEN .xls changes anchor of pictures from "Cell" to "Page"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.5 RC1
Hardware: All All
: medium major
Assignee: Noel Power
URL:
Whiteboard: target:4.1.0 target:4.0.1
Keywords: regression
: 59863 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-16 12:12 UTC by Henk Klomp
Modified: 2018-03-07 21:16 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
source input and xls & xlsx export versions (13.96 KB, application/zip)
2013-01-30 11:52 UTC, Noel Power
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Henk Klomp 2012-12-16 12:12:43 UTC

    
Comment 1 Rainer Bielefeld Retired 2012-12-16 17:06:38 UTC
I know from qa-mailinglist what reporter wanted to report:

When anchored to “cell” by hand, than save to XLS and than open the spreadsheet again, the pictures/drawings are anchored to “page” again.

[Reproducible] with parallel installation of  "LOdev  4.0.0.0.beta1   -  GERMAN UI / German Locale  [Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)]"  {tinderbox: @6, pull time 2012-12-06} on German WIN7 Home Premium (64bit) with separate /4 User Profile for Master Branch:

1. Open new Calc document from LibO Start Center
2. Insert a bullet from gallery
3. Anchor it to Page
4. Save document.odt and document.xls
5. Close and reopen both documents
   ok:     in ods bullet is anchored to cell
   NOT ok: in ods bullet is anchored to page

OOo 2.0 and LibO 3.3.3 show bullet in "document.xls" anchored to Cell, so it's a FILEOPEN problem and a regression.

Already broken with 3.6.4.3, I will do some more research later.


@Henk Klomp 
Not a valid Bug report, may be hints on <http://wiki.documentfoundation.org/BugReport> will help you to find out what information will be useful in further reports.
Comment 2 p_kongstad 2013-01-10 14:36:35 UTC
Hi, I have the same issue with Libreoffice under Linux version 4.0.0.0.beta2+ (Build ID: a131769adc3eb31209bbcf8e72333f38c2de042)
TinderBox: Linux-x86_64_11-Release-Configuration. Both the format 'Microsoft Excel 97/2000/XP/2003' and 'Microsoft Excel 2007/2010 XML' is showing the same behaviour.

The same issue with Version 4.1.0.0.alpha0+ (Build ID: fbfda39d26da6747edb3a4c6d593be7e6b2b0f1)
TinderBox: Linux-x86_64_11-Release-Configuration.

Also found the same issue with Version 3.6.4.3 (Build ID: 2ef5aff).

A really annoying issue and very time consuming when one have to work with user using these formats.

Works ok with .ods, but in my humble opinion pictures should default to anchoring to cell and not to page.
Comment 3 p_kongstad 2013-01-12 11:58:13 UTC
Hi,

This issue is also to be found in the newly release candidate rc1 Version 4.0.0.1 (Build ID: 527dba6f6e0cfbbc71bd6e7b88a52699bb48799).
Comment 4 Rainer Bielefeld Retired 2013-01-12 12:22:33 UTC
<http://wiki.documentfoundation.org/BugReport_Details#Version>!

Already [Reproducible] with Server Installation (own profile) of "LibreOffice 3.4.5 RC1  - WIN7 Home Premium (64bit) German UI [Build ID: OOO340m1 (Build:501)]"	

@Spreadsheet Team
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf (and remove others in team from CC)
Comment 5 p_kongstad 2013-01-20 10:40:48 UTC
Hi, bug also present in rc2 Version 3.6.5.2 (Build ID: 5b93205).
Comment 6 Noel Power 2013-01-23 17:21:25 UTC
I will take a look ( for xls at least ) really need to find an old install to play with too :-)
Comment 7 Not Assigned 2013-01-25 15:36:16 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=701cc2aa454b700f9e837d9ee3043598505a1405

export page/cell anchoring for xls drawing objects fdo#58360



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 p_kongstad 2013-01-26 14:10:35 UTC
Hi all,

As this is a regression and a long standing bug maybe is should be pushed against 4.0. and 3.6.5 as well?
Comment 9 Noel Power 2013-01-28 10:47:48 UTC
(In reply to comment #7)
> Noel Power committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=701cc2aa454b700f9e837d9ee3043598505a1405
> 
> export page/cell anchoring for xls drawing objects fdo#58360
> 

it appears the gerrit bot got confused and neglected to update this bug with some additional patches ( looks like it only posted the *last* associated patch or a bunch of 3 that I pushed at the same time ) the other 2 are below

http://cgit.freedesktop.org/libreoffice/core/commit/?id=55f0c9e03250cf7563b37de9953fe239dceb4ba3

    import page/cell anchoring for xlsx drawing objects fdo#58360
    
http://cgit.freedesktop.org/libreoffice/core/commit/?id=1f41546e5786dbd0a248c67ba4f1cba409fe05a6

    import page/cell anchoring for xls drawing ( & ole ) objects fdo#58360
Comment 10 p_kongstad 2013-01-30 08:25:59 UTC
Hi, 

Please consider pushing this against 4.0 and 3.6.5 as this is a regression and a long standing bug.

Thank you in advance.
Comment 11 Noel Power 2013-01-30 11:52:43 UTC
Created attachment 73922 [details]
source input and xls & xlsx export versions

source document ( .ods ) contains a bullet example from the gallery anchored as cell and as page. also included are the same documents exported to xls & xlsx
Comment 12 Noel Power 2013-02-01 09:53:42 UTC
*** Bug 59863 has been marked as a duplicate of this bug. ***
Comment 13 Not Assigned 2013-02-07 13:14:41 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=795796da79d5dd815fb2d31e8d4a244bf8d54328&h=libreoffice-4-0

export/import anchoring for xls(x) drawing ( & ole ) objects fdo#58360


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 p_kongstad 2013-02-27 12:07:01 UTC
Hi,

I confirm that this is now working for Version 4.0.1.1 (Build ID: 2c0c17a6e4bee0ee28131ea4bdc47edc700d659).

However you need to anchor the picture to the cell manually as inserting pictures are defaulting to page.

When one working with a spreadsheet data are normally linked to cell, so it would be more natural to linked in to cell and allow for dragging to another cell still being linked.

In Excel 2010 as an example inserting a picture is inserting with the option 'Move but don't size with cells'
Excel has 3 options available:
Move and size with cells
Move but don't size with cells
Don't move or size with cells

Please consider this change.
Comment 15 Noel Power 2013-02-27 12:25:50 UTC
(In reply to comment #14)
> Hi,
> 
> I confirm that this is now working for Version 4.0.1.1 (Build ID:
> 2c0c17a6e4bee0ee28131ea4bdc47edc700d659).
> 
thanks for the reminder ( I forgot to close the bug ), regarding enhancements, please open separate issue for that, it isn't appropriate to reuse an existing issue for that. 
Please note: changing defaults can be contentious, defaults are subjective after all :-) my own personal preference agrees with yours, so I'd be in favour of changing the anchoring default to cell