export/import anchoring for xls(x) drawing ( & ole ) objects fdo#58360

this patch rolls up the following commits

I8f12ce4fedd3da76bab683ac85169186deeb89dc
55f0c9e03250cf7563b37de9953fe239dceb4ba3
1f41546e5786dbd0a248c67ba4f1cba409fe05a6

Change-Id: I8f12ce4fedd3da76bab683ac85169186deeb89dc